force-app/main/default/objects/BankTransaction__c/BankTransaction__c.object-meta.xml
<CustomObject>
    <label>Bank</label>
    <nameField>
        <displayFormat>BT-{000000}</displayFormat>
        <label>BANK TRANSACTION ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>