force-app/main/default/objects/BankTransaction__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>CASE(RecordType.DeveloperName
, &apos;InboundTransactionLocalCurrency&apos;, ApplicantTrxIn__r.AccountNumber
, &apos;InboundTransactionUSDCurrency&apos;, ApplicantTrxIn__r.AccountNumber
, &apos;OutboundTransactionLocalCurrency&apos;, BeneficiaryTrxOut__r.AccountNumber
, &apos;OutboundTransactionUSDCurrency&apos;, BeneficiaryTrxOut__r.AccountNumber
, &apos;&apos;)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>