force-app/main/default/objects/BankTransaction__c/fields/AmountPaidLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidLocal__c</fullName>
    <label>AMOUNT PAID(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>