force-app/main/default/objects/BankTransaction__c/fields/AmountPaidUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidUSD__c</fullName>
    <label>AMOUNT PAID(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>