force-app/main/default/objects/BankTransaction__c/fields/AmountReceivedLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedLocal__c</fullName>
    <label>AMOUNT RECEIVED(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>