force-app/main/default/objects/BankTransaction__c/fields/AmountReceivedUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedUSD__c</fullName>
    <label>AMOUNT RECEIVED(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>