force-app/main/default/objects/BankTransaction__c/fields/ApplicantTrxIn__c.field-meta.xml
<CustomField>
    <fullName>ApplicantTrxIn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APPLICANT-TRX IN</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BANK (INBOUND TRANSACTION)</relationshipLabel>
    <relationshipName>ApplicantTrxIn</relationshipName>
    <type>Lookup</type>
</CustomField>