force-app/main/default/objects/BankTransaction__c/fields/BankAccountTrxIn__c.field-meta.xml
<CustomField>
    <fullName>BankAccountTrxIn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-TRX IN</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BankAccount__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>BANK ACCOUNT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>BANK ACCOUNT (INBOUND TRANSACTION)</relationshipLabel>
    <relationshipName>BankAccountTrxIn</relationshipName>
    <type>Lookup</type>
</CustomField>