force-app/main/default/objects/BankTransaction__c/fields/BankAccountTrxOut__c.field-meta.xml
<CustomField>
    <fullName>BankAccountTrxOut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-TRX OUT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BankAccount__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>BANK ACCOUNT</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipLabel>BANK ACCOUNT (OUTBOUND TRANSACTION)</relationshipLabel>
    <relationshipName>BankAccountTrxOut</relationshipName>
    <type>Lookup</type>
</CustomField>