force-app/main/default/objects/BankTransaction__c/fields/BankFeeCreditAccountCode__c.field-meta.xml
<CustomField>
    <fullName>BankFeeCreditAccountCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK FEE CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK (BANK FEE CREDIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>BANKBankFeeCreditAccountCode</relationshipName>
    <type>Lookup</type>
</CustomField>