force-app/main/default/objects/BankTransaction__c/fields/BankFeeDebitAccountCode__c.field-meta.xml
<CustomField>
    <fullName>BankFeeDebitAccountCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK FEE DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK (BANK FEE DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>BankFeeDebitAccountCode</relationshipName>
    <type>Lookup</type>
</CustomField>