force-app/main/default/objects/BankTransaction__c/fields/BankInCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BankInCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK-IN CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK-IN CREDIT ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BANKBankInCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>