force-app/main/default/objects/BankTransaction__c/fields/BankInDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BankInDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK-IN DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK-IN DEBIT ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BankInDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>