force-app/main/default/objects/BankTransaction__c/fields/BankOutCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BankOutCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK-OUT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK-OUT CREDIT ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BankOutCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>