force-app/main/default/objects/BankTransaction__c/fields/BankOutDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BankOutDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK-OUT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipLabel>BANK-OUT DEBIT ACCOUNTING CODE</relationshipLabel>
    <relationshipName>BANKBankOutDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>