force-app/main/default/objects/BankTransaction__c/fields/BankSourceActivityType__c.field-meta.xml
<CustomField>
    <fullName>BankSourceActivityType__c</fullName>
    <label>BANK SOURCE ACTIVITY TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SourceActivityType</valueSetName>
    </valueSet>
</CustomField>