force-app/main/default/objects/BankTransaction__c/fields/BankSubmissionType__c.field-meta.xml
<CustomField>
    <fullName>BankSubmissionType__c</fullName>
    <label>BANK SUBMISSION TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BankSubmissionType</valueSetName>
    </valueSet>
</CustomField>