force-app/main/default/objects/BankTransaction__c/fields/BankTransactionType__c.field-meta.xml
<CustomField>
    <fullName>BankTransactionType__c</fullName>
    <label>BANK TRANSACTION TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BankTransactionType</valueSetName>
    </valueSet>
</CustomField>