force-app/main/default/objects/BankTransaction__c/fields/BankTrxFeeLocal__c.field-meta.xml
<CustomField>
    <fullName>BankTrxFeeLocal__c</fullName>
    <label>BANK TRANSACTION FEE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>