force-app/main/default/objects/BankTransaction__c/fields/DifferenceLocalTrxIn__c.field-meta.xml
<CustomField>
    <fullName>DifferenceLocalTrxIn__c</fullName>
    <formula>TotalAmountOfReceivableLocal__c -  AmountReceivedLocal__c</formula>
    <label>DIFFERENCE(LOCAL)-TRX IN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>