force-app/main/default/objects/BankTransaction__c/fields/DifferenceLocalTrxOut__c.field-meta.xml
<CustomField>
    <fullName>DifferenceLocalTrxOut__c</fullName>
    <formula>TotalAmountOfPayableLocal__c -  AmountPaidLocal__c</formula>
    <label>DIFFERENCE(LOCAL)-TRX OUT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>