force-app/main/default/objects/BankTransaction__c/fields/DifferenceUSDTrxIn__c.field-meta.xml
<CustomField>
    <fullName>DifferenceUSDTrxIn__c</fullName>
    <formula>TotalAmountOfReceivableUSD__c -  AmountReceivedUSD__c</formula>
    <label>DIFFERENCE(USD)-TRX IN</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>