force-app/main/default/objects/BankTransaction__c/fields/DifferenceUSDTrxOut__c.field-meta.xml
<CustomField>
    <fullName>DifferenceUSDTrxOut__c</fullName>
    <formula>TotalAmountOfPayableUSD__c -  AmountPaidUSD__c</formula>
    <label>DIFFERENCE(USD)-TRX OUT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>