force-app/main/default/objects/BankTransaction__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID</label>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipLabel>BANK</relationshipLabel>
    <relationshipName>BANK</relationshipName>
    <type>Lookup</type>
</CustomField>