force-app/main/default/objects/BankTransaction__c/fields/OpeningBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalanceLocal__c</fullName>
    <label>OPENING BALANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>