force-app/main/default/objects/BankTransaction__c/fields/PaymentConfirmedTrxOut__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedTrxOut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-TRX OUT</label>
    <type>Checkbox</type>
</CustomField>