force-app/main/default/objects/BankTransaction__c/fields/PaymentSettledDateTrxOut__c.field-meta.xml
<CustomField>
    <fullName>PaymentSettledDateTrxOut__c</fullName>
    <label>PAYMENT SETTLED DATE-TRX OUT</label>
    <type>Date</type>
</CustomField>