force-app/main/default/objects/BankTransaction__c/fields/ProcessPayableBankOut__c.field-meta.xml
<CustomField>
    <fullName>ProcessPayableBankOut__c</fullName>
    <label>PROCESS PAYABLE-BANK OUT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>