force-app/main/default/objects/BankTransaction__c/fields/ReceiptNotesTrxIn__c.field-meta.xml
<CustomField>
    <fullName>ReceiptNotesTrxIn__c</fullName>
    <label>RECEIPT NOTES-TRX IN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>