force-app/main/default/objects/BankTransaction__c/fields/ReceiptSettledDateTrxIn__c.field-meta.xml
<CustomField>
    <fullName>ReceiptSettledDateTrxIn__c</fullName>
    <label>RECEIPT SETTLED DATE-TRX IN</label>
    <type>Date</type>
</CustomField>