force-app/main/default/objects/BankTransaction__c/fields/ReceivablePayableCompleted__c.field-meta.xml
<CustomField>
    <fullName>ReceivablePayableCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RECEIVABLE &amp; PAYABLE COMPLETED</label>
    <type>Checkbox</type>
</CustomField>