force-app/main/default/objects/BankTransaction__c/fields/RollupAmountOfInboundDepositLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfInboundDepositLocal__c</fullName>
    <label>ROLLUP AMOUNT OF INBOUND DEPOSIT(LOCAL)</label>
    <summarizedField>DepositBank__c.AmountOfInboundDepositLocalForBank__c</summarizedField>
    <summaryForeignKey>DepositBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>