force-app/main/default/objects/BankTransaction__c/fields/RollupAmountOfInboundDepositUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfInboundDepositUSD__c</fullName>
    <label>ROLLUP AMOUNT OF INBOUND DEPOSIT(USD)</label>
    <summarizedField>DepositBank__c.AmountOfInboundDepositUSDForBank__c</summarizedField>
    <summaryForeignKey>DepositBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>