force-app/main/default/objects/BankTransaction__c/fields/RollupAmountOfOutboundDepositLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfOutboundDepositLocal__c</fullName>
    <label>ROLLUP AMOUNT OF OUTBOUND DEPOSIT-DELETE</label>
    <summarizedField>DepositBank__c.AmountOfOutboundDepositLocalForBank__c</summarizedField>
    <summaryForeignKey>DepositBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>