force-app/main/default/objects/BankTransaction__c/fields/RollupAmountOfOutboundDepositUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupAmountOfOutboundDepositUSD__c</fullName>
    <label>ROLLUP AMOUNT OF OUTBOUND DEPOSIT(USD)</label>
    <summarizedField>DepositBank__c.AmountOfOutboundDepositUSDForBank__c</summarizedField>
    <summaryForeignKey>DepositBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>