force-app/main/default/objects/BankTransaction__c/fields/RollupFMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP FMS UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>CloFMSBillBank__c.FMSUnpaidBalOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>CloFMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>