force-app/main/default/objects/BankTransaction__c/fields/RollupFMSUnpaidBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfSellingLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>CloFMSBillBank__c.FMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>CloFMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>