force-app/main/default/objects/BankTransaction__c/fields/RollupFMSUnpaidBalOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupFMSUnpaidBalOfSellingUSD__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(USD)</label>
    <summarizedField>CloFMSBillBank__c.FMSUnreceivedBalOfSellingUSD__c</summarizedField>
    <summaryForeignKey>CloFMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>