force-app/main/default/objects/BankTransaction__c/fields/RollupKickbackUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(LOCAL)</label>
    <summarizedField>KickbackBank__c.KickbackUnpaidBalanceLocal__c</summarizedField>
    <summaryForeignKey>KickbackBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>