force-app/main/default/objects/BankTransaction__c/fields/RollupKickbackUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupKickbackUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(USD)</label>
    <summarizedField>KickbackBank__c.KickbackUnpaidBalanceUSD__c</summarizedField>
    <summaryForeignKey>KickbackBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>