force-app/main/default/objects/BankTransaction__c/fields/RollupLoanAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>RollupLoanAmountFCY__c</fullName>
    <label>ROLLUP LOAN AMOUNT(FCY)</label>
    <summarizedField>LoanBank__c.LoanAmountFCYBank__c</summarizedField>
    <summaryForeignKey>LoanBank__c.BankID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>