force-app/main/default/objects/BankTransaction__c/fields/RollupLoanAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupLoanAmountLocal__c</fullName>
    <label>ROLLUP LOAN AMOUNT(LOCAL)</label>
    <summarizedField>LoanBank__c.LocalAmountLocalBank__c</summarizedField>
    <summaryForeignKey>LoanBank__c.BankID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>