force-app/main/default/objects/BankTransaction__c/fields/RollupOtherUnpaidUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupOtherUnpaidUSD__c</fullName>
    <label>ROLLUP OTHER UNPAID BAL(USD)</label>
    <summarizedField>OtherBank__c.UnpaidBalOfOtherUSDBank__c</summarizedField>
    <summaryFilterItems>
        <field>OtherBank__c.OtherRecordTypeForBank__c</field>
        <operation>notContain</operation>
        <value>Bank Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>OtherBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>