force-app/main/default/objects/BankTransaction__c/fields/RollupPayslipUnpaidBal__c.field-meta.xml
<CustomField>
    <fullName>RollupPayslipUnpaidBal__c</fullName>
    <label>ROLLUP PAYSLIP UNPAID BAL</label>
    <summarizedField>Payslipbank__c.UnpaidBalUnpaidBalOfPayslipBank__c</summarizedField>
    <summaryForeignKey>Payslipbank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>