force-app/main/default/objects/BankTransaction__c/fields/RollupPIUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupPIUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(LOCAL)</label>
    <summarizedField>PIBank__c.UnpaidBalancePILocalForBank__c</summarizedField>
    <summaryForeignKey>PIBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>