force-app/main/default/objects/BankTransaction__c/fields/RollupPIUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupPIUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(USD)</label>
    <summarizedField>PIBank__c.UnpaidBalancePIUSDForBank__c</summarizedField>
    <summaryForeignKey>PIBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>