force-app/main/default/objects/BankTransaction__c/fields/RollupTotalLoanRepayment__c.field-meta.xml
<CustomField>
    <fullName>RollupTotalLoanRepayment__c</fullName>
    <label>ROLLUP TOTAL LOAN REPAYMENT</label>
    <summarizedField>LoanPayBank__c.TotalAmountOfLoanRepaymentPayReq__c</summarizedField>
    <summaryForeignKey>LoanPayBank__c.LoanPayBankID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>