force-app/main/default/objects/BankTransaction__c/fields/RollupVATAmountSellingInclTax__c.field-meta.xml
<CustomField>
    <fullName>RollupVATAmountSellingInclTax__c</fullName>
    <label>ROLLUP VAT AMOUNT SELLING INCL TAX</label>
    <summarizedField>VATBank__c.AmountSellingInclTAXForBank__c</summarizedField>
    <summaryForeignKey>VATBank__c.BankID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>