force-app/main/default/objects/BankTransaction__c/fields/RollupWMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>CloWMSBillBank__c.WMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>CloWMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>