force-app/main/default/objects/BankTransaction__c/fields/RollupWMSUnpaidBalOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfBuyingUSD__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(USD)</label>
    <summarizedField>CloWMSBillBank__c.WMSUnpaidBalOfBuyingUSD__c</summarizedField>
    <summaryForeignKey>CloWMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>