force-app/main/default/objects/BankTransaction__c/fields/RollupWMSUnpaidBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfSellingLocal__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>CloWMSBillBank__c.WMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>CloWMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>