force-app/main/default/objects/BankTransaction__c/fields/RollupWMSUnpaidBalOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>RollupWMSUnpaidBalOfSellingUSD__c</fullName>
    <label>ROLLUP WMS UNRECEIVED BAL OF SELL(USD)</label>
    <summarizedField>CloWMSBillBank__c.WMSUnreceivedBalOfSellingUSD__c</summarizedField>
    <summaryForeignKey>CloWMSBillBank__c.BankTransactionID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>