force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfPayableInPrintFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPayableInPrintFCY__c</fullName>
    <formula>IF(TotalAmountOfPayableUSD__c = NULL
, TotalAmountOfPayableFCYFormu__c
, TotalAmountOfPayableUSD__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Payable in Print(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>