force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfPayableInPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPayableInPrintLocal__c</fullName>
    <formula>IF(TotalAmountOfPayableLocal__c = NULL
, TotalAmountOfPayableLocalFormu__c  
, TotalAmountOfPayableLocal__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Payable in Print(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>