force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfPayableLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPayableLocal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOTAL AMOUNT OF PAYABLE(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>