force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfPayableLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPayableLocalFormu__c</fullName>
    <formula>RollupFMSUnpaidBalOfBuyingLocal__c	+RollupWMSUnpaidBalOfBuyingLocal__c	+  	 RollupPIUnpaidBalanceLocal__c   +  RollupKickbackUnpaidBalanceLocal__c	+     	RollupAmountOfOutboundDeposit__c	  +   RollupPayslipUnpaidBal__c  + 	RollupOtherUnpaidBalance__c +  	RollupTotalLoanRepayment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Payable(Local)-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>