force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfPayableUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfPayableUSD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOTAL AMOUNT OF PAYABLE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>