force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfReceivableFCYFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfReceivableFCYFormu__c</fullName>
    <formula>RollupFMSUnpaidBalOfSellingUSD__c	  +  RollupOtherUnreceivedBalUSD__c	+    	RollupWMSUnpaidBalOfSellingUSD__c	+     RollupAmountOfInboundDepositUSD__c    +   RollupLoanAmountFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Receivable(FCY)-Formu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>