force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfReceivableInPrint__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfReceivableInPrint__c</fullName>
    <formula>IF(TotalAmountOfReceivableLocal__c = NULL
, TotalAmountOfReceivableLocalFormu__c
, TotalAmountOfReceivableLocal__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Receivable in Print</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>