force-app/main/default/objects/BankTransaction__c/fields/TotalAmountofReceivableinPrintFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofReceivableinPrintFCY__c</fullName>
    <formula>IF(TotalAmountOfReceivableUSD__c = NULL
,  TotalAmountOfReceivableFCYFormu__c
,  TotalAmountOfReceivableUSD__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Receivable in Print(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>