force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfReceivableLocalFormu__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfReceivableLocalFormu__c</fullName>
    <formula>RollupFMSUnpaidBalOfSellingLocal__c	 +  RollupOtherUnreceivedBalance__c	+     RollupWMSUnpaidBalOfSellingLocal__c	+     	RollupAmountOfInboundDepositLocal__c	+   	RollupLoanAmountLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>