force-app/main/default/objects/BankTransaction__c/fields/TotalAmountOfReceivableUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfReceivableUSD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>TOTAL AMOUNT OF RECEIVABLE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>