force-app/main/default/objects/BankTransaction__c/fields/TotalPaidIncludeBankFeeLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidIncludeBankFeeLocal__c</fullName>
    <formula>AmountPaidLocal__c + BankTrxFeeLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Include Bank Fee(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>