force-app/main/default/objects/BankTransaction__c/fields/TotalReceivedDeductBankFeeFCY__c.field-meta.xml
<CustomField>
    <fullName>TotalReceivedDeductBankFeeFCY__c</fullName>
    <formula>AmountReceivedUSD__c - BankTrxFeeUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Received Deduct Bank Fee(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>