force-app/main/default/objects/BankTransaction__c/fields/TransactionDescription__c.field-meta.xml
<CustomField>
    <fullName>TransactionDescription__c</fullName>
    <label>TRANSACTION DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>