force-app/main/default/objects/BankTransaction__c/fields/TransactionFeePayer__c.field-meta.xml
<CustomField>
    <fullName>TransactionFeePayer__c</fullName>
    <label>TRANSACTION FEE PAYER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FeePayer</valueSetName>
    </valueSet>
</CustomField>