force-app/main/default/objects/BankTransaction__c/fields/TrxAmountInclBankFeeUSD__c.field-meta.xml
<CustomField>
    <fullName>TrxAmountInclBankFeeUSD__c</fullName>
    <label>TRANSACTION AMOUNT INCL BANK FEE(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>