force-app/main/default/objects/BankTransaction__c/fields/TrxPlanProcessingType__c.field-meta.xml
<CustomField>
    <fullName>TrxPlanProcessingType__c</fullName>
    <label>Trx Plan Processing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrxPlanProcessing</valueSetName>
    </valueSet>
</CustomField>