force-app/main/default/objects/BankTransaction__c/recordTypes/InboundTransactionLocalCurrency.recordType-meta.xml
<RecordType>
    <fullName>InboundTransactionLocalCurrency</fullName>
    <active>true</active>
    <label>Inbound Transaction-Local Currency</label>
</RecordType>