force-app/main/default/objects/BankTransaction__c/recordTypes/InboundTransactionUSDCurrency.recordType-meta.xml
<RecordType>
    <fullName>InboundTransactionUSDCurrency</fullName>
    <active>true</active>
    <label>Inbound Transaction-USD Currency</label>
</RecordType>