force-app/main/default/objects/BankTransaction__c/recordTypes/InternalTransactionLocalLocal.recordType-meta.xml
<RecordType>
    <fullName>InternalTransactionLocalLocal</fullName>
    <active>false</active>
    <label>Internal Transaction-Local To Local</label>
</RecordType>