force-app/main/default/objects/BankTransaction__c/recordTypes/InternalTransactionLocalUSD.recordType-meta.xml
<RecordType>
    <fullName>InternalTransactionLocalUSD</fullName>
    <active>false</active>
    <label>Internal Transaction-Local To USD</label>
</RecordType>