force-app/main/default/objects/BankTransaction__c/recordTypes/InternalTransactionUSDLocal.recordType-meta.xml
<RecordType>
    <fullName>InternalTransactionUSDLocal</fullName>
    <active>false</active>
    <label>Internal Transaction-USD To Local</label>
</RecordType>