force-app/main/default/objects/BankTransaction__c/recordTypes/InternalTransactionUSDUSD.recordType-meta.xml
<RecordType>
    <fullName>InternalTransactionUSDUSD</fullName>
    <active>false</active>
    <label>Internal Transaction-USD To USD</label>
</RecordType>